# PhiMesaSI

./: .gitignore  README.md  main.py  pyproject.toml
notebook/: qwen3_info_detection.ipynb  qwen3_phi_detection.ipynb  visualization.ipynb
output/: loss.csv
script/: main.py  objective.py  preprocess.py  train.py  utils.py
settings/: train.yaml
shell/: train.sh
